--- a/widgets/_panel.scss
+++ b/widgets/_panel.scss
@@ -64,7 +64,7 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
 
     &:active, &:overview, &:focus, &:checked {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8);
-      //@if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85); }
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85); }
 
       // The clock display needs to have the background on .clock because
       // we want to exclude the do-not-disturb indicator from the background
@@ -73,7 +73,7 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
 
         .clock {
           box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8);
-          //@if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85); }
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85); }
         }
       }
 
@@ -87,12 +87,12 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
 
     &:hover {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85);
-      //@if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.9); }
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.9); }
       &.clock-display {
         box-shadow: none;
         .clock {
           box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.85);
-          //@if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.9); }
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.9); }
         }
       }
 
@@ -106,12 +106,12 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
     
     &:active:hover, &:overview:hover, &:focus:hover, &:checked:hover {
       box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75);
-      //@if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8); }
+      @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8); }
       &.clock-display {
         box-shadow: none;
         .clock {
           box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.75);
-          //@if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8); }
+          @if $variant == 'light' { box-shadow: inset 0 0 0 100px transparentize($panel_fg_color, 0.8); }
         }
       }
 
